--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div class="block">
+      <h1>Find info about a country!</h1>
+      <p>
+        In this exercise you will have to implement a GraphQL call.
+        <br />
+        <br />
+        The goal is to type the
+        <a
+          target="_blank"
+          href="https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2#Officially_assigned_code_elements"
+          >ISO A2 code</a
+        >
+        of a country (e.g. Germany is DE) and to display the characteristics of
+        this country below.
+        <br /><br />
+        You have the first steps of implementation in <strong>index.js</strong>.
+      </p>
+      <a class="link" href="https://countries.trevorblades.com/" target="_blank"
+        >Go to the API playground</a
+      >
+    </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <div class="block">
+      <form id="countries-search">
+        <input
+          type="text"
+          id="search"
+          name="search"
+          placeholder="Search..."
+          autocomplete="off"
+        />
+        <button type="submit">Enter</button>
+      </form>
+    </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div class="block">
+      <div id="countries-container"></div>
+    </div>
+
+    <script src="src/index.js"></script>
   </body>
 </html>
